array.island.Island.scala.error
Compilation error:
Island:3: error: not found: value nbNiveaux
  nbNiveaux=0
  ^Island:6: error: not found: value nbNiveaux
      nbNiveaux=nbNiveaux+1
      ^Island:9: error: not found: value nbNiveaux
  return nbNiveaux
         ^