array.island.Island.scala.code
def island(num:Array[Int]): Int = {
  nbNiveaux=0
  for(i<- 1 to num.size) {
    if(num(i) < num(i+1)) {
      nbNiveaux=nbNiveaux+1
    }
  }
  return nbNiveaux
}
